# COMP333-Synthesizer-Plug-In

./: .gitignore  README.md  StyleGuide.md  install_dependancies.sh  install_dependencies.sh
Installer/: postinstall
MLPlugIn/: CMakeLists.txt  MLPlugIn.jucer
MLPlugIn/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
MLPlugIn/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MLPlugIn/Source/AudioGenerators/: Noise.h
MLPlugIn/Source/RAVE/: BlockTypes.h  FIFO.h  RaveModelManager.cpp  RaveModelManager.h  rave.cpp  rave.h  test_libtorch.cpp  test_libtorch.h
MLPlugIn/tools/: download_rave_models.py
MLSynth/: MLSynth.jucer
MLSynth/Builds/MacOSX/: Info-App.plist
MLSynth/Builds/MacOSX/MLSynth.xcodeproj/: project.pbxproj
MLSynth/Builds/MacOSX/MLSynth.xcodeproj/project.xcworkspace/xcuserdata/kidodouglas.xcuserdatad/: UserInterfaceState.xcuserstate
MLSynth/Builds/MacOSX/MLSynth.xcodeproj/xcuserdata/sam.xcuserdatad/xcschemes/: xcschememanagement.plist
MLSynth/Source/: Main.cpp  MainComponent.h  WavetableFactory.h
MLSynth_old/JuceLibraryCode/: JuceHeader.h
MLSynth_old/Source/: MainComponent.cpp  NoiseGenerator.h  WavetableOscillator.h
RAVE_models/: test.py
SimpleSynthNoiseTutorial/: SimpleSynthNoiseTutorial.jucer
SimpleSynthNoiseTutorial/SimpleSynthNoiseTutorial/: SimpleSynthNoiseTutorial.jucer
SimpleSynthNoiseTutorial/SimpleSynthNoiseTutorial/Builds/LinuxMakefile/: Makefile
SimpleSynthNoiseTutorial/SimpleSynthNoiseTutorial/Builds/MacOSX/SimpleSynthNoiseTutorial.xcodeproj/: project.pbxproj
SimpleSynthNoiseTutorial/SimpleSynthNoiseTutorial/Builds/MacOSX/SimpleSynthNoiseTutorial.xcodeproj/project.xcworkspace/xcuserdata/sam.xcuserdatad/: UserInterfaceState.xcuserstate
SimpleSynthNoiseTutorial/SimpleSynthNoiseTutorial/Builds/VisualStudio2019/: SimpleSynthNoiseTutorial.sln  SimpleSynthNoiseTutorial_App.vcxproj  SimpleSynthNoiseTutorial_App.vcxproj.filters
SimpleSynthNoiseTutorial/SimpleSynthNoiseTutorial/Source/: Main.cpp  Main.h  NoiseGenerator.h
SimpleSynthNoiseTutorial/Source/: Main.cpp  Main.h  NoiseGenerator.h
how_package/: how_package.md
model_downloader/: app.py
server/: app.py
tests/: .test_rave.py  backend_logic_tests.py  expose_modules.py  frontend_tests.py  ml.txt  test_rave.py
trying_out_code/: sine.py
trying_out_code/NewProject/: NewProject.jucer
trying_out_code/NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
trying_out_code/NewProject/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
